--- a/ai/package.json
+++ b/ai/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon index"
   },
   "keywords": [],
-  "author": "",
+  "author": "rasulovdev.uz",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "telegraf": "^4.11.2"
   },
   "devDependencies": {
